use all bs styles. fix contact alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,3 +55,9 @@ a {
 .accordion-button:focus {
     box-shadow: 0 0 0 .25rem #f7f7f7;
 }
+
+.calendar-pg ul {
+    @media (max-width: 992px){
+        padding: 0;
+    }
+}
